--- a/frontend/Index.html
+++ b/frontend/Index.html
@@ -6,23 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SATIA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/satia/frontend/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/satia/frontend/css/bootstrap-grid.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="/satia/frontend/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 
-    <script src="/satia/frontend/js/jquery-3.3.1.js"></script>
-    <script src="/satia/frontend/js/main.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
     <header>
-        <div class="banner">
+        <div class="h-50 banner">
+                <button id="find_btn">Find Me</button>
+                <div id="result"></div>
+            <div class="alert">
+                Alerta
+            </div>
+            <br>
+            <div class="time">
+                TIEMPO
+            </div>
+            <div class="distance">
+                DISTANCIA
+            </div>
         </div>
 
         <div class="container">
             <div class="row">
 
-                <div class="col-lg-8">
+                <div class="col-lg-8 h-50 recommend">
                     <div class="card h-100">
                         <div class="card-body">
                             <div class="card-title">
@@ -37,7 +49,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-4 h-50 data">
                         <div class="card h-100">
                             <div class="card-body">
                                 <div class="card-title">
