--- a/frontend/Index.html
+++ b/frontend/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 
-<head>
+<head >
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SATIA</title>
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-
+     <script src="js/main.js"></script>
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/main.js"></script>
+
 </head>
 
-<body>
+<body onload="getLocation()">
     <header>
         <div class="h-50 banner">
                 <button id="find_btn">Find Me</button>
@@ -68,6 +68,7 @@
         </div>
 
     </header>
+
 </body>
 
 </html>
