--- a/frontend/Index.html
+++ b/frontend/Index.html
@@ -17,7 +17,7 @@
 <body onload="getLocation()">
     <header>
         <div class="h-50 banner">
-                <button id="find_btn">Find Me</button>
+                <button id="boton-gordo">Find Me</button>
                 <div id="result"></div>
             <div class="alert">
                 Alerta
