--- a/frontend/Index.html
+++ b/frontend/Index.html
@@ -16,8 +16,8 @@
 
 <body onload="getLocation()">
     <header>
-        <div class="h-50 banner">
-                <button id="find_btn">Find Me</button>
+        <div class="banner">
+                <button class="boton-gordo">Find Me</button>
                 <div id="result"></div>
             <div class="alert">
                 Alerta
