--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,11 +23,12 @@
                     Su posicion actual es:<br />
                     Long: 5.45454, Lat: 45.56415
                 </div>
-                <div class="col-lg-12 alert">
+                <div id="idalerta" class="col-lg-12 alert">
                     Sin Alertas
                 </div>
                 <div class="col-12 time_container">
-                    A las <span class="time">12:32:12</span> <span>a <span class="time">12Km </span> </span>
+                    <span id="idtiempo" class="time"></span> 
+                    <span id="idposicion"> </span>
                 </div>
             </div>
         </div>
