--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,7 @@
         <div class="container-fluid banner">
             <div class="row">
                 <div class=" col-lg-12 result">
+                    <img src="img/Logo Satia.png" alt="logo satia" class="logo">
                     Su posicion actual es:<br />
                     Long: 5.45454, Lat: 45.56415
                 </div>
@@ -27,8 +28,8 @@
                     Sin Alertas
                 </div>
                 <div class="col-12 time_container">
-                    <span id="idtiempo" class="time"></span> 
-                    <span id="idposicion"> </span>
+                    <div id="idtiempo" class="time"></div> 
+                    <div id="idposicion"> </div>
                 </div>
             </div>
         </div>
@@ -45,12 +46,12 @@
                             Recomendaciones
                         </div>
                         <div class="card-body">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Cras justo odio</li>
+                            <ul id="tips" class="list-group list-group-flush">
+                                <!-- <li class="list-group-item">Cras justo odio</li>
                                 <li class="list-group-item">Dapibus ac facilisis in</li>
                                 <li class="list-group-item">Morbi leo risus</li>
                                 <li class="list-group-item">Porta ac consectetur ac</li>
-                                <li class="list-group-item">Vestibulum at eros</li>
+                                <li class="list-group-item">Vestibulum at eros</li> -->
                             </ul>
                         </div>
 
