--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,7 @@
             <div class="row">
                 <div class=" col-lg-12 result">
                     <img src="img/Logo Satia.png" alt="logo satia" class="logo">
-                    Su posicion actual es:<br />
-                    Long: 5.45454, Lat: 45.56415
+
                 </div>
                 <div id="idalerta" class="col-lg-12 alert">
                     Sin Alertas
@@ -62,16 +61,11 @@
 
                     <div class="card">
                         <div class="card-header">
-                            Datoss
+                            Mapa de proximidad
                         </div>
                         <div class="card-body">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Cras justo odio</li>
-                                <li class="list-group-item">Dapibus ac facilisis in</li>
-                                <li class="list-group-item">Morbi leo risus</li>
-                                <li class="list-group-item">Porta ac consectetur ac</li>
-                                <li class="list-group-item">Vestibulum at eros</li>
-                            </ul>
+                            
+
                         </div>
 
                     </div>
