--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SATIA</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/logo satia.ico">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
