--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,20 +5,17 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SATIA</title>
-    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/logo satia.ico">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="js/jquery-3.3.1.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
 
 <body>
     <header>
-
         <div class="container-fluid banner">
             <div class="row">
                 <div class=" col-lg-12 result">
@@ -33,47 +30,31 @@
                 </div>
             </div>
         </div>
-
-
-
-        <div class="container-fluid">
-            <div class="row">
-
-                <div class="col-lg-8 h-50 recommend">
-
-                    <div class="card">
-                        <div class="card-header">
-                            Recomendaciones
-                        </div>
-                        <div class="card-body">
-                            <ul id="tips" class="list-group list-group-flush">
-                                <!-- <li class="list-group-item">Cras justo odio</li>
-                                <li class="list-group-item">Dapibus ac facilisis in</li>
-                                <li class="list-group-item">Morbi leo risus</li>
-                                <li class="list-group-item">Porta ac consectetur ac</li>
-                                <li class="list-group-item">Vestibulum at eros</li> -->
-                            </ul>
-                        </div>
-
+    </header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 h-50 recommend">
+                <div class="card">
+                    <div class="card-header">
+                        Recomendaciones
+                    </div>
+                    <div class="card-body">
+                        <ul id="tips" class="list-group list-group-flush"></ul>
                     </div>
                 </div>
-
-                <div class="col-lg-4 h-50 data">
-
-                    <div class="card">
-                        <div class="card-header">
-                            Mapa de proximidad
-                        </div>
-                        <div class="card-body">
-                            <div id="map" class="map" align="center"></div>
-                        </div>
+            </div>
+            <div class="col-lg-4 h-50 data">
+                <div class="card">
+                    <div class="card-header">
+                        Mapa de proximidad
+                    </div>
+                    <div class="card-body">
+                        <div id="map" class="map" align="center"></div>
                     </div>
                 </div>
-
             </div>
         </div>
-
-    </header>
+    </div>
 
 </body>
 
