update almost final

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,8 +35,8 @@
         <div class="row">
             <div class="col-lg-8 h-50 recommend">
                 <div class="card">
-                    <div class="card-header">
-                        Recomendaciones
+                    <div class="card-header" class="tit">
+                        <p class="tit">Recomendaciones</p>
                     </div>
                     <div class="card-body">
                         <ul id="tips" class="list-group list-group-flush"></ul>
@@ -45,8 +45,8 @@
             </div>
             <div class="col-lg-4 h-50 data">
                 <div class="card">
-                    <div class="card-header">
-                        Mapa de proximidad
+                    <div class="card-header" >
+                        <p class="tit">Mapa de proximidad</p>
                     </div>
                     <div class="card-body">
                         <div id="map" class="map" align="center"></div>
