--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container-fluid banner">
             <div class="row">
-                <div class=" col-lg-12 result">
+                <div class=" col-12 result">
                     <img src="img/Logo Satia.png" alt="logo satia" class="logo">
                 </div>
                 <div id="idalerta" class="col-lg-12 alert">
@@ -31,9 +31,9 @@
             </div>
         </div>
     </header>
-    <div class="container-fluid">
+    <div class="container-fluid mapita">
         <div class="row">
-            <div class="col-lg-8 h-50 recommend">
+            <div class="col-8 h-50 recommend">
                 <div class="card">
                     <div class="card-header" class="tit">
                         <p class="tit">Recomendaciones</p>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 h-50 data">
+            <div class="col-4 h-50 data">
                 <div class="card">
                     <div class="card-header" >
                         <p class="tit">Mapa de proximidad</p>
